--- a/dragging_task/style.css
+++ b/dragging_task/style.css
@@ -30,7 +30,9 @@ body, html {
 }
 
 #startButton {
+    position: relative;
     padding: 10px 20px;
+    z-index: 200;
     font-size: 1em;
     cursor: pointer;
 }
@@ -40,12 +42,13 @@ body, html {
 .cornerCircle {
     width: 30px;
     height: 30px;
-    z-index: 1;
+    /* z-index: 10; */
     border-radius: 50%;
 }
 
 #centerCircle {
     position: absolute;
+    z-index: 10;
     top: 50%;
     left: 50%;
     background-color: black;
