--- a/dragging_task/style.css
+++ b/dragging_task/style.css
@@ -48,7 +48,7 @@ body, html {
 
 #centerCircle {
     position: absolute;
-    z-index: 10;
+    /* z-index: 10; */
     top: 50%;
     left: 50%;
     background-color: black;
